# DRC_shared

./: CMakeLists.txt  README.md  package.xml
include/drc_shared/: data_logger.hpp  draw_state_machine.hpp  internal_yarp_rpc_interface.hpp  state_machine.hpp  yarp_rpc_interface.hpp
include/drc_shared/module_statuses/: all_definitions.h  drc_com_statuses.h  drc_debris_statuses.h  drc_door_statuses.h  drc_drive_statuses.h  drc_plug_statuses.h  drc_poses_statuses.h  drc_valve_statuses.h  drc_wall_statuses.h  fall_protector_statuses.h  gaze_control_statuses.h  manipulation_statuses.h  simple_homing_statuses.h  walking_statuses.h
include/drc_shared/planner_msgs/: cmd_struct.h  flat_walk_cmd.h  flat_walk_plan.h
include/drc_shared/utils/: OccupancyGrid.h  convex_hull.h  module_state_sender.h  module_state_streamer.h
include/drc_shared/yarp_grabbers/: YARP_OccupancyGrid_grabber.h  YARP_Pose2D_grabber.h  YARP_grabber.hpp  YARP_pcl_grabber.h  grabber_hello_world.cpp
include/drc_shared/yarp_msgs/: KDL_frame_msg.h  YARP_Header.h  YARP_OccupancyGrid_msg.h  YARP_PCLPointField.h  YARP_Point.h  YARP_PointCloud2.h  YARP_Pose.h  YARP_Quaternion.h  com_msg.h  com_perception_msg.h  debris_msg.h  door_msg.h  drc_raise_msg.h  drill_msg.h  drive_msg.h  encoders_msg.h  fs_perception_msg.h  fs_planner_msg.h  fs_walking_msg.h  gaze_control_msg.h  lazarus_control_msg.h  locomanipulation_msg.h  manipulation_msg.h  multicontact_msg.h  object_perception_msgs.h  odometry_msg.h  perception_params_msg.h  plug_msg.h  robotInterfaceStatus.h  robot_planned_state_msg.h  robotran_predictor_msg.h  supervisor_msg.h  topic_change_msg.h  trj_generator_msg.h  upper_body_control_msg.h  valve_msg.h  valve_planner_msg.h  vehicle_msg.h  walking_msg.h  wall_msg.h  (+1 more)
launch/: asus_tf.launch  asus_tf_DEFAULT.launch  asus_tf_ROBOT.launch  asus_tf_SIMULATION.launch  asus_xtion.launch  floating_base_slider.launch
src/: OccupancyGrid.cpp  generic.cpp
src/MotorControlHelpers/: CMakeLists.txt  MotorControlHelper.cpp  RobotHelper.cpp  RobotHelper.h  config.ini
src/MotorControlHelpers/Example/: ExampleModule.cpp  ExampleModule.h  main.cpp
src/examples/: draw_state_machine.cpp  grabber_example.cpp  module_state_streamer_example.cpp
src/planner_msgs/: flat_walk_cmd.cpp  flat_walk_plan.cpp
src/tests/: CMakeLists.txt
src/utils/: module_state_sender.cpp  module_state_streamer.cpp
tests/: CMakeLists.txt
urdf/: floating_base.urdf.xacro  floating_base.urdf.xacro~
